--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.2",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
